--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
 ###########################################################
-### Welcome to Beautiful Jekyll!
-### This config file is meant for settings that affect your entire website. When you first
-### set up your website you should go through all these settings and edit them, but after
-### the initial set up you won't need to come back to this file often.
+### Hi, my name is Elaine, and I am a Ph.D. student in statistics at the University of Wisconsin-Madison.  
 ###########################################################
 
 ############################
