--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ###########################################################
-### Hi, my name is Elaine, and I am a Ph.D. student in statistics at the University of Wisconsin-Madison.  
+### Hi, my name is Elaine, and I am a Ph.D. student in statistics at the University of Wisconsin-Madison.###
 ###########################################################
 
 ############################
