--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-#avatar: "/assets/img/avatar-icon.png"
+#avatar: "/assets/img/Elaine_profile_Photo.jpg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
@@ -46,8 +46,8 @@ round-avatar: true
 social-network-links:
   email: "chiukuanjung@gmail.com"
   #rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  #facebook: deanattali
-  #github: daattali
+  facebook: Elaine Chiu   
+  github: elainekjchiu
   #twitter: daattali
   #patreon: DeanAttali
   #youtube: c/daattali
@@ -123,7 +123,7 @@ navbar-var-length: false
 navbar-col: "#EAEAEA"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
-page-col: "#FFFFFF"
+page-col: "#F5F5DC"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
