--- a/_config.yml
+++ b/_config.yml
@@ -15,12 +15,14 @@ title: Elaine
 # Your name to show in the footer
 author: Elaine  
 
+
 ###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
 
 navbar-links:
   About Me: "aboutme"
+  Notes: "Intro-to-Statistics"
 ################
 # --- Logo --- #
 ################
