--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author: Elaine
 
 navbar-links:
   About Me: "aboutme"
-  Notes: "Intro-to-Statistics"
+  Notes: "2022-09-08-Intro-to-Statistical-Methods"
 ################
 # --- Logo --- #
 ################
