--- a/_config.yml
+++ b/_config.yml
@@ -48,14 +48,14 @@ round-avatar: true
 social-network-links:
   email: "chiukuanjung@gmail.com"
   #rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: Elaine Chiu   
+  #facebook: Elaine Chiu   
   github: elainekjchiu
   #twitter: daattali
   #patreon: DeanAttali
   #youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
-#  linkedin: daattali
+linkedin: www.linkedin.com/in/elaine-chiu-231767181
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -86,7 +86,7 @@ social-network-links:
 share-links-active:
   twitter: false
   facebook: false
-  linkedin: false
+  linkedin: true
   vk: false
 
 # How to display the link to your website in the footer
