--- a/_config.yml
+++ b/_config.yml
@@ -46,16 +46,16 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "chiukuanjung@gmail.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
+  # email: "chiukuanjung@gmail.com"
+  #rss: true  # remove this line if you don't want to show an RSS link at the bottom
   #facebook: Elaine Chiu   
-  github: elainekjchiu
+  #github: elainekjchiu
   #twitter: daattali
   #patreon: DeanAttali
   #youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
-   linkedin: www.linkedin.com/in/elaine-chiu-231767181
+#  linkedin: www.linkedin.com/in/elaine-chiu-231767181
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -86,7 +86,7 @@ social-network-links:
 share-links-active:
   twitter: false
   facebook: false
-  linkedin: true
+  linkedin: false
   vk: false
 
 # How to display the link to your website in the footer
