--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ author: Elaine
 navbar-links:
   About Me: "aboutme"
   Notes: "notes"
+  Causal Inference: "project" 
 ################
 # --- Logo --- #
 ################
